<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:scrollbars="none">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/mainCardview"
            android:layout_width="match_parent"
            android:layout_height="360dp"
            android:padding="10dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeWidth="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/donegal_one"
                        android:gravity="center"
                        android:hint="@string/loan_one"
                        android:padding="10dp" />


                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="160dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/loanamountone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/amount"
                            android:inputType="number"
                            android:maxLength="8" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="160dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tenureone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/tenure"
                            android:inputType="number"
                            android:maxLength="2" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="160dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/interestrateone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/interest_rate"
                            android:inputType="numberDecimal"
                            android:maxLength="5" />

                    </com.google.android.material.textfield.TextInputLayout>







                </LinearLayout>




                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/donegal_one"
                        android:gravity="center"
                        android:hint="@string/loan_two"
                        android:padding="10dp" />

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="160dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/loanamounttwo"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/amount"
                            android:inputType="number"
                            android:maxLength="8" />
                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="160dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tenuretwo"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/tenure"
                            android:inputType="number"
                            android:maxLength="2" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="160dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/interestratetwo"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/interest_rate"
                            android:inputType="numberDecimal"
                            android:maxLength="5" />

                    </com.google.android.material.textfield.TextInputLayout>





                </LinearLayout>


            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/compare_button"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_margin="20dp"
                android:fontFamily="@font/donegal_one"
                android:padding="20dp"
                app:strokeWidth="1dp"
                app:strokeColor="@color/light_teal"
                android:textAllCaps="false"
                android:hint="@string/compare" />


        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardmonthlyemi"
            style="@style/Widget.MaterialComponents.CardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:visibility="gone"
            app:cardCornerRadius="10dp"
            app:cardElevation="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mainCardview"
            app:strokeWidth="1dp">


            <RelativeLayout
                android:id="@+id/rltitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:padding="10dp">

                <TextView
                    android:id="@+id/emi_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="@string/emi_monthly_payment"
                    android:textSize="20sp" />


                <TextView
                    android:id="@+id/resultone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/emi_title"
                    android:layout_marginStart="40dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/u20b9_13_693_6"
                    android:textSize="20sp" />


                <View
                    android:layout_width="1dp"
                    android:layout_height="30dp"
                    android:layout_below="@id/emi_title"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="42dp"
                    android:layout_marginLeft="42dp"
                    android:layout_marginTop="8dp"
                    android:layout_toEndOf="@id/resultone"
                    android:layout_toRightOf="@id/resultone"
                    android:background="@color/light_teal" />


                <TextView
                    android:id="@+id/resulttwo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/emi_title"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="40dp"
                    android:layout_marginRight="40dp"
                    android:gravity="center"
                    android:text="@string/u20b9_13_693_6"
                    android:textSize="20sp" />


                <TextView
                    android:id="@+id/differenceforemi_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/resultone"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="Difference"
                    android:textSize="18sp" />


            </RelativeLayout>


        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardinterestrate"
            style="@style/Widget.MaterialComponents.CardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:visibility="gone"
            app:cardCornerRadius="10dp"
            app:cardElevation="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardmonthlyemi"
            app:strokeWidth="1dp">


            <RelativeLayout
                android:id="@+id/rltitl"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp">

                <TextView
                    android:id="@+id/totalinterestpayable_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:gravity="center"
                    android:hint="@string/total_interest_payable"
                    android:textSize="20sp" />


                <TextView
                    android:id="@+id/resultotalinterest_one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/totalinterestpayable_title"
                    android:layout_marginStart="40dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/u20b9_13_693_6"
                    android:textSize="20sp" />


                <View
                    android:layout_width="1dp"
                    android:layout_height="30dp"
                    android:layout_below="@id/totalinterestpayable_title"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="42dp"
                    android:layout_marginLeft="42dp"
                    android:layout_marginTop="8dp"
                    android:layout_toEndOf="@id/resultotalinterest_one"
                    android:layout_toRightOf="@id/resultotalinterest_one"
                    android:background="@color/light_teal" />


                <TextView
                    android:id="@+id/resultotalinterest_two"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/totalinterestpayable_title"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="40dp"
                    android:layout_marginRight="40dp"
                    android:gravity="center"
                    android:text="@string/u20b9_13_693_6"
                    android:textSize="20sp" />


                <TextView
                    android:id="@+id/differenceforinterestrate_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/resultotalinterest_two"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="Difference"
                    android:textSize="18sp" />


            </RelativeLayout>


        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardtotal"
            style="@style/Widget.MaterialComponents.CardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:visibility="gone"
            app:cardCornerRadius="10dp"
            app:cardElevation="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardinterestrate"
            app:strokeWidth="1dp">


            <RelativeLayout
                android:id="@+id/rltit2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp">

                <TextView
                    android:id="@+id/totalpayable_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="@string/total_payment_principal_interest"
                    android:textSize="20sp" />


                <TextView
                    android:id="@+id/resultotalpayable_one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/totalpayable_title"
                    android:layout_marginStart="40dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/u20b9_13_693_6"
                    android:textSize="20sp" />


                <View
                    android:layout_width="1dp"
                    android:layout_height="30dp"
                    android:layout_below="@id/totalpayable_title"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="42dp"
                    android:layout_marginLeft="42dp"
                    android:layout_marginTop="8dp"
                    android:layout_toEndOf="@id/resultotalpayable_one"
                    android:layout_toRightOf="@id/resultotalpayable_one"
                    android:background="@color/light_teal" />


                <TextView
                    android:id="@+id/resultotalpayable_two"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/totalpayable_title"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="40dp"
                    android:layout_marginRight="40dp"
                    android:gravity="center"
                    android:text="@string/u20b9_13_693_6"
                    android:textSize="20sp" />


                <TextView
                    android:id="@+id/differencefortotalpayable_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/resultotalpayable_one"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="Difference"
                    android:textSize="18sp" />


            </RelativeLayout>


        </com.google.android.material.card.MaterialCardView>





    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>